# ARC

./: CMakeLists.txt  Makefile  README.md
include/: arc.hpp  driver.hpp  ideal_cache.hpp  page.hpp
src/: driver.cpp  driver_arc.cpp  driver_ideal.cpp
tests/ARC/: run_tests.sh
tests/Ideal/: gen_tests.py  run_tests.sh
tests/comparison/: comparison_results.csv  gen_stress_tests.py  histo.py  run_tests.sh
